made a couple responsive adjustments.

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -50,16 +50,16 @@
   <!-- TODO -->
   <div class="mw8 center pt3">
     <div class="flex-ns justify-between">
-      <nav>
-        <a class="link dim white f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
-        <a class="link dim white f6 f5-l dib mr3 mr4-l" href="#" title="About">About</a>
-        <a class="link dim white f6 f5-l dib mr3 mr4-l" href="#" title="Events">Events</a>
-        <a class="link dim white f6 f5-l dib mr3 mr4-l" href="#" title="Become a Sponsor">Become a Sponsor</a>
-        <a class="link dim white f6 f5-l dib" href="#" title="Contact">Contact</a>
+      <nav class="tc tl-ns">
+        <a class="link dim white f6 f5-l dib mr3 mr4-l pb2" href="#" title="Home">Home</a>
+        <a class="link dim white f6 f5-l dib mr3 mr4-l pb2" href="#" title="About">About</a>
+        <a class="link dim white f6 f5-l dib mr3 mr4-l pb2" href="#" title="Events">Events</a>
+        <a class="link dim white f6 f5-l dib mr3 mr4-l pb2" href="#" title="Become a Sponsor">Become a Sponsor</a>
+        <a class="link dim white f6 f5-l dib pb2" href="#" title="Contact">Contact</a>
       </nav>
       <div>
-        <h3 class="f4 b lh-title mb2 primary">Social media</h3>
-        <nav class="flex flex-nowrap">
+        <h3 class="f4 b lh-title mb2 primary tc tl-ns">Social media</h3>
+        <nav class="flex flex-nowrap justify-center justify-start-ns">
           {{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
           {{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
           {{ partial "social-icon" (dict "link" "#" "svg" "icons-youtube") }}
