--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -25,13 +25,13 @@
       </p>
     </div>
     <div class="cf mw8 center">
-      <div class='fl w-33 w-50-m w-33-l pr2 pr2-l'>
+      <div class='fl w-50 w-33-l pr2 pr2-l'>
         <div class="pv6 cover bg-center" style="background: url(http://lorempixel.com/800/800/abstract/);"></div>
       </div>
-      <div class='fl w-33 w-50-m w-33-l ph3 pr0-m ph3-l'>
+      <div class='fl w-50 w-33-l pr0-m ph3-l'>
         <div class="pv6 cover bg-center" style="background-image: url(http://lorempixel.com/800/800/abstract/);"></div>
       </div>
-      <div class='fl w-33 w-100-m w-33-l pl2 pl0-m pl2-l mt4-m'>
+      <div class='fl w-100 w-33-l pl0-m pl2-l mt4 mt0-l'>
         <div class="pv6 cover bg-center" style="background-image: url(http://lorempixel.com/800/800/abstract/);"></div>
       </div>
     </div>
